--- a/android/app/src/main/res/layout/fragment_detail_stats.xml
+++ b/android/app/src/main/res/layout/fragment_detail_stats.xml
@@ -19,16 +19,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             tools:context=".presentation.stats.detail.DetailStatsFragment">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_vs_team_winning_percentage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
                 android:background="@drawable/bg_white_radius_12dp"
-                android:padding="20dp"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -36,6 +34,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="20dp"
                     android:text="VS 팀 승률"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +43,7 @@
                     android:id="@+id/rv_vs_team_winning_percentage"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:paddingHorizontal="20dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@id/tv_vs_team_winning_percentage"
                     tools:itemCount="5"
@@ -54,13 +54,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="20dp"
                     android:background="@drawable/bg_stroke_gray300_radius_12dp"
                     android:onClick="@{() -> viewModel.toggleVsTeamStats()}"
                     android:paddingVertical="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rv_vs_team_winning_percentage"
-                    app:layout_constraintVertical_bias="0.0"
-                    tools:layout_editor_absoluteX="40dp">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rv_vs_team_winning_percentage">
 
                     <TextView
                         android:id="@+id/tv_show_more"
@@ -95,10 +96,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_white_radius_12dp"
-                android:paddingBottom="20dp"
                 app:layout_constraintTop_toBottomOf="@id/constraint_vs_team_winning_percentage">
 
                 <TextView
@@ -113,12 +112,13 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <com.github.mikephil.charting.charts.BarChart
+                <com.github.mikephil.charting.charts.HorizontalBarChart
                     android:id="@+id/bar_chart"
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
+                    android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="4dp"
-                    android:paddingBottom="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_stadium_visit_counts" />
