--- a/android/app/src/main/res/layout/fragment_home_check_in_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_home_check_in_confirm.xml
@@ -21,12 +21,11 @@
 
         <TextView
             android:id="@+id/tv_check_in_confirm_message"
-            style="@style/TextView.Pretendard.Bold"
+            style="@style/TextView.Pretendard.Bold.24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
             android:text="@string/home_check_in_confirm"
-            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@id/tv_check_in_caution"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +34,13 @@
         <TextView
             android:id="@+id/tv_check_in_caution"
             style="@style/TextView.Pretendard.Medium"
-            android:textSize="14sp"
             android:layout_width="wrap_content"
-            android:lineSpacingExtra="4dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:lineSpacingExtra="4dp"
             android:text="@string/home_check_in_caution"
             android:textColor="@color/gray500"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@id/tv_negative_btn"
             app:layout_constraintEnd_toEndOf="@id/tv_check_in_confirm_message"
             app:layout_constraintStart_toStartOf="@id/tv_check_in_confirm_message"
@@ -52,8 +51,8 @@
             style="@style/TextView.Pretendard.Bold.16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/bg_gray100_radius_12dp_ripple"
             android:gravity="center"
             android:paddingHorizontal="40dp"
