--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -71,6 +71,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="TextView.Pretendard.Bold.24" parent="TextView.Pretendard.Bold">
+        <item name="android:textSize">24sp</item>
+    </style>
+
     <style name="TextView.Pretendard.Bold.32" parent="TextView.Pretendard.Bold">
         <item name="android:textSize">32sp</item>
     </style>
