--- a/android/app/src/main/res/layout/fragment_setting_delete_account.xml
+++ b/android/app/src/main/res/layout/fragment_setting_delete_account.xml
@@ -19,22 +19,11 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_delete_account"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp"
-            android:padding="20dp">
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="60dp">
 
-            <ImageView
-                android:id="@+id/iv_delete_account_illustration"
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:background="@drawable/bg_white_radius_12dp"
-                android:contentDescription="@string/Setting_delete_account_illustration_description"
-                android:padding="20dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_baseball_leave_stadium"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_setting_account"
@@ -43,44 +32,68 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_white_radius_12dp"
                 android:padding="20dp"
-                app:layout_constraintTop_toBottomOf="@id/iv_delete_account_illustration">
+                app:layout_constraintBottom_toTopOf="@id/btn_cancel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/tv_delete_account_question"
-                    style="@style/TextView.Pretendard.Bold.20"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/setting_delete_account_question"
+                <ImageView
+                    android:id="@+id/iv_delete_account_illustration"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:background="@drawable/bg_white_radius_12dp"
+                    android:contentDescription="@string/Setting_delete_account_illustration_description"
+                    android:padding="20dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_baseball_leave_stadium"
+                    app:layout_constraintBottom_toTopOf="@id/tv_delete_account_question"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_confirm"
-                    style="@style/Widget.App.Button.Negative.Pretendard.Medium"
-                    android:layout_width="130dp"
+                <TextView
+                    android:id="@+id/tv_delete_account_question"
+                    style="@style/TextView.Pretendard.Medium.16"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:onClick="@{() -> viewModel.deleteAccount()}"
-                    android:text="@string/setting_delete_account_confirm"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toStartOf="@id/btn_cancel"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_delete_account_question" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_cancel"
-                    style="@style/Widget.App.Button.Positive.Pretendard.Medium"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:onClick="@{() -> viewModel.cancelDeleteAccount()}"
-                    android:text="@string/setting_delete_account_cancel"
-                    android:textSize="18sp"
+                    android:text="JakeWharton님,\n야구보구와 함께한 nn일을 소중히 기억할게요. "
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/btn_confirm"
-                    app:layout_constraintTop_toTopOf="@id/btn_confirm" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_delete_account_illustration" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_cancel"
+                style="@style/Widget.App.Button.Positive.Pretendard.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:onClick="@{() -> viewModel.cancelDeleteAccount()}"
+                android:paddingVertical="16dp"
+                android:text="@string/setting_delete_account_cancel"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_confirm"
+                style="@style/Widget.App.Button.Negative.Pretendard.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:onClick="@{() -> viewModel.deleteAccount()}"
+                android:paddingVertical="16dp"
+                android:text="@string/setting_delete_account_confirm"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="id/btn_cancel" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
