--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
             android:id="@+id/constraint_activity_main_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/gray050"
-            tools:context=".presentation.MainActivity">
+            android:background="@color/gray050">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
