--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
             android:visibility="gone" />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/cpi_checkIn_loading"
+            android:id="@+id/cpi_check_in_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
