--- a/android/app/src/main/res/layout/fragment_default_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_default_confirm.xml
@@ -5,9 +5,11 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="dialogDefaultUiModel"
-            type="com.yagubogu.presentation.util.DialogDefaultUiModel" />
+            type="com.yagubogu.presentation.dialog.DialogDefaultUiModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,17 +17,33 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:paddingHorizontal="30dp"
-        android:paddingVertical="40dp">
+        android:paddingVertical="30dp">
+
+        <TextView
+            android:id="@+id/tv_dialog_emoji"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{dialogDefaultUiModel.emoji}"
+            android:textSize="48dp"
+            android:visibility="@{dialogDefaultUiModel.emoji==null ? View.GONE : View.VISIBLE}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpUsage"
+            tools:text="\uD83D\uDC2F"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_dialog_title"
             style="@style/TextView.Esamanru.Medium.20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@{dialogDefaultUiModel.emoji != null ? @dimen/spacing_20dp : 0}"
             android:text="@{dialogDefaultUiModel.title}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_dialog_emoji"
+            tools:layout_marginTop="20dp"
             tools:text="다이얼로그 제목" />
 
         <TextView
@@ -34,14 +52,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="40dp"
             android:text="@{dialogDefaultUiModel.message}"
             android:textAlignment="center"
+            android:textColor="@color/gray700"
+            android:visibility="@{dialogDefaultUiModel.message==null ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
-            tools:text="엄청나게\n긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트" />
+            tools:text="엄청나게\n긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트엄청나게긴텍스트"
+            tools:visibility="visible" />
 
 
         <com.google.android.material.button.MaterialButton
@@ -56,10 +77,10 @@
             android:paddingVertical="12dp"
             android:text="@{dialogDefaultUiModel.negativeText==null ? @string/all_cancel : dialogDefaultUiModel.negativeText}"
             android:textColor="@color/gray500"
-
             app:layout_constraintEnd_toStartOf="@id/tv_positive_btn"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_dialog_message" />
+            app:layout_constraintTop_toBottomOf="@id/tv_dialog_message"
+            tools:text="취소" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_positive_btn"
@@ -75,6 +96,7 @@
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_negative_btn"
-            app:layout_constraintTop_toTopOf="@id/tv_negative_btn" />
+            app:layout_constraintTop_toTopOf="@id/tv_negative_btn"
+            tools:text="확인" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
