--- a/android/app/src/main/res/layout/fragment_setting_account.xml
+++ b/android/app/src/main/res/layout/fragment_setting_account.xml
@@ -3,15 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="viewModel"
-            type="com.yagubogu.presentation.setting.SettingViewModel" />
-
-    </data>
-
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.setting.SettingAccountFragment">
@@ -21,32 +13,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/bg_white_radius_12dp"
-            android:padding="20dp">
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent">
 
             <include
                 android:id="@+id/layout_logout"
                 layout="@layout/item_setting_menu"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:menuTitle="@{@string/setting_logout}" />
-
 
             <include
                 android:id="@+id/layout_delete_account"
                 layout="@layout/item_setting_menu"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/layout_logout"
                 app:menuTitle="@{@string/setting_delete_account}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
