--- a/android/app/src/main/res/layout/fragment_default_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_default_confirm.xml
@@ -33,17 +33,22 @@
             tools:text="\uD83D\uDC2F"
             tools:visibility="visible" />
 
+        <Space
+            android:id="@+id/space_emoji_margin"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:visibility="@{dialogDefaultUiModel.emoji==null ? View.GONE : View.VISIBLE}"
+            app:layout_constraintTop_toBottomOf="@id/tv_dialog_emoji" />
+
         <TextView
             android:id="@+id/tv_dialog_title"
             style="@style/TextView.Esamanru.Medium.20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@{dialogDefaultUiModel.emoji != null ? @dimen/spacing_20dp : 0}"
             android:text="@{dialogDefaultUiModel.title}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_dialog_emoji"
-            tools:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/space_emoji_margin"
             tools:text="다이얼로그 제목" />
 
         <TextView
