--- a/android/app/src/main/res/layout/fragment_default_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_default_confirm.xml
@@ -16,8 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:paddingHorizontal="30dp"
-        android:paddingVertical="30dp">
+        android:padding="30dp">
 
         <TextView
             android:id="@+id/tv_dialog_emoji"
