--- a/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/tv_selection_confirm_message"
-            style="@style/TextView.Esamanru.Medium.20"
+            style="@style/TextView.Pretendard.Bold.24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
