--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -29,14 +29,15 @@
                     android:layout_height="wrap_content"
                     tools:text="@string/app_name" />
 
-            <ImageView
-                android:id="@+id/iv_settings"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center_vertical|end"
-                android:contentDescription="@string/setting_icon_description"
-                android:src="@drawable/ic_settings" />
-        </androidx.appcompat.widget.Toolbar>
+                <ImageView
+                    android:id="@+id/iv_settings"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/setting_icon_description"
+                    android:src="@drawable/ic_settings" />
+            </androidx.appcompat.widget.Toolbar>
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fcv_fragment"
